re PR objc/16546 ([unit-at-a-time] Solaris 10/x86 libobjc bootstrap failure: invalid assembler code)

2004-11-08  Andrew Pinski  <pinskia@physics.uc.edu>

        PR objc/16546
        * objc-act.c (generate_method_descriptors): Remove setting
        the new decls' type to variable_length_type.
        (generate_ivar_lists): Likewise.
        (generate_dispatch_tables): Likewise.

From-SVN: r90304